Реализовано получене списка инспекторов по API и тесты к нему.
